# minitpr

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  changelog.md
src/: errors.rs  lib.rs  structures.rs
src/parse/: coordinates.rs  ffparams.rs  header.rs  interactions.rs  mod.rs  molblocks.rs  moltypes.rs  simbox.rs  symtab.rs  topology.rs  xdr.rs
tests/: expected_values.rs  main.rs
tests/test_files/: double_2023.tpr  large_2021.tpr  large_2021_aa.tpr  large_2021_aa_posres.tpr  large_5.tpr  large_5_posres.tpr  restrangles_2025.tpr  small_aa_2016.tpr  small_aa_2016_intermolecular.tpr  small_aa_2021.yaml  small_aa_2021_intermolecular.tpr  small_aa_5.tpr  small_aa_5_intermolecular.tpr  small_cg_2016.tpr  small_cg_2016_intermolecular.tpr  small_cg_2021.tpr  small_cg_2021.yaml  small_cg_2021_intermolecular.tpr  small_cg_5.tpr  small_cg_5_intermolecular.tpr  tpr2yaml  triclinic_2021.tpr  triclinic_5.tpr
